force-app/main/default/objects/Showtime__c/Showtime__c.object-meta.xml
<CustomObject>
    <label>Showtime</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Showtime Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Showtimes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>