force-app/main/default/objects/Showtime__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Malayalam</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>