force-app/main/default/objects/Showtime__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screen</label>
    <referenceTo>Screen__c</referenceTo>
    <relationshipLabel>Showtimes</relationshipLabel>
    <relationshipName>Showtimes</relationshipName>
    <type>Lookup</type>
</CustomField>