force-app/main/default/objects/Showtime__c/fields/Show_Format__c.field-meta.xml
<CustomField>
    <fullName>Show_Format__c</fullName>
    <label>Show Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2D</fullName>
            </value>
            <value>
                <fullName>3D</fullName>
            </value>
            <value>
                <fullName>4D</fullName>
            </value>
            <value>
                <fullName>IMAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>