force-app/main/default/objects/Showtime__c/fields/Show_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_Time__c</fullName>
    <label>Show Time</label>
    <type>DateTime</type>
</CustomField>