force-app/main/default/objects/Showtime__c/validationRules/Showtime.validationRule-meta.xml
<ValidationRule>
    <fullName>Showtime</fullName>
    <active>true</active>
    <errorConditionFormula>Show_Time__c &lt; DATETIMEVALUE(TODAY())</errorConditionFormula>
    <errorDisplayField>Show_Time__c</errorDisplayField>
    <errorMessage>ShowTime can&apos;t be less than today.</errorMessage>
</ValidationRule>